--- a/views/blogPosts.mustache
+++ b/views/blogPosts.mustache
@@ -5,7 +5,18 @@
     <title></title>
   </head>
   <body>
+    <h1>HELLO</h1>
+    <form class="" action="/blogList" method="post">
+      <input type="text" name="Title" value="{{title}}" placeholder="Title">
+      <input type="text" name="Author" value="{{author}}" placeholder="Author">
+      <input type="textarea" name="Body" value="{{body}}" placeholder="Body">
+      <input type="submit" name="" value="Submit">
+
+    </form>
+
+
     {{#blogList}}
+
     {{/blogList}}
   </body>
 </html>
